--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <meta name="description" content="Dino T-Rex Game, Dinosaur Game"/>
     <meta name="keywords" content="Dino T-Rex Game, Dinosaur Game, Google Game T-Rex, Dino Runner"/>
     <meta property="og:image" content="img/og.jpg"/>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Barlow+Condensed:wght@200;400&family=Concert+One&family=Cuprum:wght@400;600;700&family=DM+Sans:wght@400;500;700&family=Indie+Flower&family=Inter:wght@300;500&family=Kaushan+Script&family=Oswald:wght@200;300;600&family=Roboto+Mono:wght@100&family=Roboto:wght@100;300;400;500;700;900&family=Silkscreen&family=Ubuntu+Condensed&display=swap" rel="stylesheet">
     <link rel="shortcut icon" href="img/favicon.png"/>
     <link rel="stylesheet" href="./css/styles.css">
     <title>Dino Game</title>
@@ -21,11 +24,12 @@
           <img id='cactus' src="./img/cactus.png" alt="cactus_pic">
         </p>
         <div class="timer_info" id="timer">00:00:00
-          <p>Press SPACE or TAB to start</p>
+          <p>Presiona ESPACIO o TAB para comenzar</p>
         </div>
       </div>
     </div>
 
     <script src="./js/main.js"></script>
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   </body>
 </html>
